Optimisation of Genius Square solver. Links to problems in Performance section. Cosmetic enhancements for mobile.

--- a/BlazorAI/wwwroot/index.html
+++ b/BlazorAI/wwwroot/index.html
@@ -59,6 +59,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 
+    <script src="js/ScrollToElement.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Material JS -->
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>-->
